--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <img src="tony.jpg" class="pic" width="300px" height="300px">
         <div class="lines">
             <p class="text-center">CEO</p>
-            <p class="text-center">Pn No:8130806079</p>
+            <p class="text-center">Ph. No:81XXXXXXXX</p>
             <p class="text-center">Email:vanshkakkar04@gmail.com</p>
         </div>
         </div>
@@ -41,8 +41,8 @@
         <img src="colonel.jpg" class="pic" width="300px"  height="300px">
         <div class="lines">
             <p class="text-center">CTO</p>
-            <p class="text-center">Pn No:9654211030</p>
-            <p class="text-center">Email:anmolkakkar@gmail.com</p>
+            <p class="text-center">Ph. No:96XXXXXXXX</p>
+            <p class="text-center">Email:anmolkakkar@gabcde.com</p>
         </div>
         </div>
     </div>
@@ -52,8 +52,8 @@
         <img src="al.jpg" class="pic" width="300px"  height="300px">
         <div class="lines">
             <p class="text-center">CFO</p>
-            <p class="text-center">Pn No:9747893790</p>
-            <p class="text-center">Email:prathamchadha@gmail.com</p>
+            <p class="text-center">Ph. No:97XXXXXXXX</p>
+            <p class="text-center">Email:prathamchadha@abcde.com</p>
         </div>
         </div>
         
@@ -62,8 +62,8 @@
         <img src="mike.jpg" class="pic" width="300px"  height="300px">
         <div class="lines">
             <p class="text-center">COO</p>
-            <p class="text-center">Pn No:9787688830</p>
-            <p class="text-center">Email:deekshachadha@gmail.com</p>
+            <p class="text-center">Ph. No:98XXXXXXX</p>
+            <p class="text-center">Email:deekshachadha@abcde.com</p>
         </div>
         </div>
        </div>
