--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
         </div>
         
         <div class="info">
-         <h2>DEEKSHA: </h2><a href="https://en.wikipedia.org/wiki/Michael_Corleone"><img src="mike.jpg" class="pic" width="400px"  height="400px"></a> <img src="mike.jpg" class="pic" width="400px"  height="400px">
+         <h2>DEEKSHA: </h2><a href="https://en.wikipedia.org/wiki/Michael_Corleone"><img src="mike.jpg" class="pic" width="400px"  height="400px"></a> 
         <div class="lines">
             <p class="text-center">COO</p>
             <p class="text-center">Ph. No:98XXXXXXX</p>
