--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
                 <img src="wm.jpg" class="image">
             </div> 
             <ul>
-                <li><a href="index.html">home</a></li>
+                <li><a href="#">home</a></li>
                 <li><a href="about.html">about</a></li>
+                <li><a href="index.html#A">A</a></li>
+                <li><a href="index.html#B">B</a></li>
+                <li><a href="index.html#C">C</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
             <div class="search">
@@ -34,7 +37,7 @@
                 <img src="https://source.unsplash.com/1600x400/?shopping,ecommerce">
             </div>
             <div class="card">
-                <h2>CATEGORY-A</h2>
+                <h2 id = "A">CATEGORY-A</h2>
                 <div class="card-item">
                     <img src="https://source.unsplash.com/160x160/?shopping,golf" alt="" width="160px">
 
@@ -83,7 +86,7 @@
             </div>
 
             <div class="card">
-                <h2>CATEGORY-B</h2>
+                <h2 id="B">CATEGORY-B</h2>
                 <div class="card-item">
                     <img src="https://source.unsplash.com/160x160/?shopping,india" alt="" width="160px">
 
@@ -132,7 +135,7 @@
             </div>
 
             <div class="card">
-                <h2>CATEGORY-C</h2>
+                <h2 id="C">CATEGORY-C</h2>
                 <div class="card-item">
                     <img src="https://source.unsplash.com/160x160/?politician,obama" alt="" width="160px">
 
