--- a/about.html
+++ b/about.html
@@ -17,10 +17,16 @@
              </div> 
              <ul>
                  <li><a href="index.html">home</a></li>
-                 <li><a href="about.html">about</a></li>
+                 <li><a href="#">about</a></li>
+                 <li><a href="index.html#A">A</a></li>
+                 <li><a href="index.html#B">B</a></li>
+                 <li><a href="index.html#C">C</a></li>
                  <li><a href="contact.html">contact</a></li>
              </ul>
-             
+             <div class="search">
+                <input type="text" name="" id="" placeholder="Search Here">
+                <button class="btn">SEARCH</button>
+            </div>
          </nav>
     </header>
     <div class="container">
